--- a/src/pages/compare/index.less
+++ b/src/pages/compare/index.less
@@ -1,6 +1,5 @@
 .content {
   display: flex;
-  padding: 24px;
   gap: 24px;
   align-items: center;
   height: 100%;
@@ -18,6 +17,7 @@
 
     .editorBox {
       flex: 1;
+      overflow: hidden;
     }
   }
 }
